--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Scratch2MCPI with MinecraftGraphicsTurtle + MinecraftStuff</h1>
+<p><a href="scratch_projects">Scratch Sample Projects</a></p>
 </body>
 </html>
