--- a/ble/index.html
+++ b/ble/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <h1 class="title">送信用フォーム・ボタン</h1>
          <div class="buttons" style="margin-top: 1.5rem">
-          <input id="message" value="hello" />
+          <input id="message" value="fw" />
           <button id="send">送信</button>
        </div>
       </div>
