--- a/ble/index.html
+++ b/ble/index.html
@@ -99,7 +99,7 @@
         }
       }
       function sendMessage() {
-       if (!device || !device.gatt.connected || !myCharacteristic) return ;
+       if (!device || !device.gatt.connected || !myCharacteristics) return ;
        var text = document.querySelector("#message").value;
        var arrayBuffe = new TextEncoder().encode(text);
        myCharacteristics.writeValue(arrayBuffe);
