--- a/ble/index.html
+++ b/ble/index.html
@@ -32,6 +32,7 @@
       const UUID_TX_CHAR_CHARACTERISTIC = "6e400002-b5a3-f393-e0a9-e50e24dcca9e";
       const UUID_RX_CHAR_CHARACTERISTIC = "6e400003-b5a3-f393-e0a9-e50e24dcca9e";
       let myCharacteristics;
+      let myCharacteristics2;
       let device;
 
       async function onStartButtonClick() {
@@ -49,14 +50,15 @@
           console.log("Getting Service...");
           const service = await server.getPrimaryService(UUID_UART_SERVICE);
           console.log("Getting Characteristic...");
-          myCharacteristics = await service.getCharacteristic(UUID_RX_CHAR_CHARACTERISTIC);
+          myCharacteristics = await service.getCharacteristic(UUID_TX_CHAR_CHARACTERISTIC);
           myCharacteristics.startNotifications();
           console.log("> Notifications started");
           myCharacteristics.addEventListener("characteristicvaluechanged", handleNotifications);
+          myCharacteristics2 = await service.getCharacteristic(UUID_RX_CHAR_CHARACTERISTIC);
           var text = "fw";
           var arrayBuffe = new TextEncoder().encode(text);
-          if(myCharacteristics.properties.write) {
-            myCharacteristics.writeValue(arrayBuffe);
+          if(myCharacteristics2.properties.write) {
+            myCharacteristics2.writeValue(arrayBuffe);
           } else {
             alert("can't write"); 
           }
