--- a/ble/index.html
+++ b/ble/index.html
@@ -103,6 +103,8 @@
                 break;
               default:
                 console.log(`センサの値 ${parseInt(inputValue)}`);
+                console.log(`センサの値 ` + inputValue);
+                console.log(`元の値 ` + value);
             }
           } catch (error) {
             console.log("Argh! " + error);
