--- a/sc.html
+++ b/sc.html
@@ -13,7 +13,16 @@
 </head>
 <body>
   <h1>学習指導要領キーワード検索</h1>
-  
+  <p>検索対象は<a href="https://www.mext.go.jp/a_menu/other/data_00002.htm">学習指導要領コード</a>の以下のものを対象としています</p>
+  <tr>
+    <td>幼稚園教育要領コード	【81V10】バージョン1.0 ■Excel版</td>
+    <td>小学校学習指導要領コード	【82V12】バージョン1.2 ■Excel版</td>
+    <td>中学校学習指導要領コード	【83V11】バージョン1.1 ■Excel版</td>
+    <td>高等学校学習指導要領コード	【84V10】バージョン1.0 ■Excel版</td>
+    <td>特別支援学校 幼稚部教育要領コード	【85V10】バージョン1.0 ■Excel版</td>
+    <td>特別支援学校 小学部・中学部学習指導要領コード	【86V12】バージョン1.2 ■Excel 版</td>
+    <td>特別支援学校 高等部学習指導要領コード	【8BV12】バージョン1.2 ■Excel版</td>
+  </tr>
   <!-- キーワード入力フォーム -->
   <form id="searchForm">
     <label for="keyword">キーワード：</label>
