--- a/sc.html
+++ b/sc.html
@@ -14,6 +14,7 @@
 <body>
   <h1>学習指導要領キーワード検索</h1>
   <p>検索対象は<a href="https://www.mext.go.jp/a_menu/other/data_00002.htm">学習指導要領コード</a>の以下のものを対象としています</p>
+  <table>
   <tr>
     <td>幼稚園教育要領コード	【81V10】バージョン1.0 ■Excel版</td>
     <td>小学校学習指導要領コード	【82V12】バージョン1.2 ■Excel版</td>
@@ -23,6 +24,8 @@
     <td>特別支援学校 小学部・中学部学習指導要領コード	【86V12】バージョン1.2 ■Excel 版</td>
     <td>特別支援学校 高等部学習指導要領コード	【8BV12】バージョン1.2 ■Excel版</td>
   </tr>
+  </table>
+  <p></p>
   <!-- キーワード入力フォーム -->
   <form id="searchForm">
     <label for="keyword">キーワード：</label>
